# MobAdaptUi-AuroraOS

./: CMakeLists.txt  README.md  ru.bmstu.MobAdaptUi.desktop
ncnn/: CMakeLists.txt
ncnn/ncnn/: CMakeLists.txt
ncnn/ncnn/examples/: nanodet.cpp  nanodetplus_pnnx.cpp  yolov3.cpp  yolov7.cpp
qml/: MobAdaptUi.qml
qml/cover/: DefaultCoverPage.qml
qml/pages/: AboutPage.qml  Chart.qml  MainPage.qml  MainPage0.qml
rpm/: ru.bmstu.MobAdaptUi.changes.in  ru.bmstu.MobAdaptUi.changes.run.in  ru.bmstu.MobAdaptUi.spec
src/: main.cpp  neural-net.h  neuron.h  utilityservice.cpp  utilityservice.h
translations/: MobAdaptUi-ru.ts  MobAdaptUi.ts
